--- a/import.html
+++ b/import.html
@@ -2,160 +2,78 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Import dat z obrázku</title>
-
+<title>Import statistik ze zápasu</title>
 <style>
-body{
-    margin:0;
-    font-family:Arial, Helvetica, sans-serif;
-    background:#f2f2f2;
-}
+body{margin:0;font-family:Arial;background:#f2f2f2}
+nav{background:#22a6df}
+.menu{max-width:1200px;margin:0 auto;display:flex;gap:30px;padding:0 20px}
+.menu-item{position:relative}
+.menu-item>a{display:block;padding:14px 12px;color:white;font-weight:bold;text-decoration:none}
+.menu-item:hover>a{background:white;color:#22a6df;border-radius:4px}
+.dropdown{display:none;position:absolute;top:100%;left:0;background:#fff;min-width:220px;box-shadow:0 4px 10px rgba(0,0,0,.2)}
+.dropdown a{display:block;padding:10px 12px;color:#22a6df;text-decoration:none}
+.menu-item:hover .dropdown{display:block}
 
-/* ===== MENU ===== */
-nav{
-    background:#22a6df;
-}
-.menu{
-    max-width:1200px;
-    margin:0 auto;
-    display:flex;
-    gap:30px;
-    padding:0 20px;
-}
-.menu-item{
-    position:relative;
-}
-.menu-item > a{
-    display:block;
-    padding:14px 12px;
-    color:white;
-    text-decoration:none;
-    font-weight:bold;
-}
-.menu-item:hover > a{
-    background:#ffffff;
-    color:#22a6df;
-    border-radius:4px;
-}
-
-.dropdown{
-    display:none;
-    position:absolute;
-    top:100%;
-    left:0;
-    background:white;
-    min-width:240px;
-    box-shadow:0 4px 10px rgba(0,0,0,0.2);
-    z-index:10;
-}
-.dropdown a{
-    display:block;
-    padding:10px 12px;
-    text-decoration:none;
-    color:#22a6df;
-}
-.dropdown a:hover{
-    background:#f0f0f0;
-}
-.menu-item:hover .dropdown{
-    display:block;
-}
-
-/* ===== LAYOUT ===== */
-.wrapper{
-    max-width:1200px;
-    margin:0 auto;
-    background:white;
-    min-height:100vh;
-    padding:30px;
-}
-
-h1{
-    margin-top:0;
-}
-
-/* ===== UPLOAD ===== */
-.upload-box{
-    margin-top:40px;
-    padding:50px;
-    border:2px dashed #22a6df;
-    text-align:center;
-}
-
-button{
-    padding:10px 18px;
-    font-size:16px;
-    cursor:pointer;
-}
+.wrapper{max-width:1200px;margin:0 auto;background:white;padding:30px;min-height:100vh}
+table{border-collapse:collapse;width:100%;margin-top:20px}
+th,td{border:1px solid #999;padding:6px 8px;text-align:center}
+th{background:#cfe8f7}
+.left{text-align:left}
+.upload{margin:20px 0;padding:20px;border:2px dashed #22a6df;text-align:center}
 </style>
 </head>
-
 <body>
 
-<!-- ===== MENU ===== -->
 <nav>
-    <div class="menu">
-
-        <div class="menu-item">
-            <a>Extraliga</a>
-            <div class="dropdown">
-                <a href="index.html">Extraliga – základní část</a>
-                <a href="playoff.html">Extraliga – play off</a>
-            </div>
-        </div>
-
-        <div class="menu-item">
-            <a>Mistrovství světa</a>
-            <div class="dropdown">
-                <a href="ms.html">MS – základní část</a>
-                <a href="#">MS – play off</a>
-            </div>
-        </div>
-
-        <div class="menu-item">
-            <a>Olympijský turnaj</a>
-            <div class="dropdown">
-                <a href="olympiada.html">OH – základní část</a>
-                <a href="#">OH – play off</a>
-            </div>
-        </div>
-
-        <div class="menu-item">
-            <a>Světový pohár</a>
-            <div class="dropdown">
-                <a href="worldcup.html">SP – základní část</a>
-                <a href="#">SP – play off</a>
-            </div>
-        </div>
-
-    </div>
+<div class="menu">
+<div class="menu-item"><a>Extraliga</a><div class="dropdown">
+<a href="index.html">Základní část</a>
+<a href="playoff.html">Play off</a>
+</div></div>
+<div class="menu-item"><a>Mistrovství světa</a></div>
+<div class="menu-item"><a>Olympijský turnaj</a></div>
+<div class="menu-item"><a>Světový pohár</a></div>
+</div>
 </nav>
 
-<!-- ===== OBSAH ===== -->
 <div class="wrapper">
+<h1>Import statistik ze zápasu (obrázek)</h1>
 
-    <h1>Import dat z obrázku</h1>
+<div class="upload">
+<input type="file" id="img" accept="image/*">
+<p>Po nahrání se data zapíšou do tabulky (OCR logika se doplní).</p>
+</div>
 
-    <div class="upload-box">
-        <p><strong>Nahrát obrázek</strong></p>
-
-        <input type="file" id="imageInput" accept="image/*"><br><br>
-
-        <button id="processBtn" disabled>Zpracovat obrázek</button>
-
-        <p style="margin-top:20px;color:#666;">
-            (Čtení dat z obrázku doplníme později)
-        </p>
-    </div>
+<table id="stats">
+<tr>
+<th class="left">Statistika</th>
+<th>Hosté</th>
+<th>Domácí</th>
+</tr>
+<tr><td class="left">Góly vstřelené</td><td></td><td></td></tr>
+<tr><td class="left">Góly inkasované</td><td></td><td></td></tr>
+<tr><td class="left">Hity dané</td><td></td><td></td></tr>
+<tr><td class="left">Hity obdržené</td><td></td><td></td></tr>
+<tr><td class="left">Vhazování vyhrané</td><td></td><td></td></tr>
+<tr><td class="left">Vhazování prohrané</td><td></td><td></td></tr>
+<tr><td class="left">Čas v útoku</td><td></td><td></td></tr>
+<tr><td class="left">Čas v obraně</td><td></td><td></td></tr>
+<tr><td class="left">Počet přesilovek</td><td></td><td></td></tr>
+<tr><td class="left">Minuty v přesilovce</td><td></td><td></td></tr>
+<tr><td class="left">Využití přesilovek</td><td></td><td></td></tr>
+<tr><td class="left">Minuty v oslabení</td><td></td><td></td></tr>
+<tr><td class="left">Inkasované góly v oslabení</td><td></td><td></td></tr>
+<tr><td class="left">Góly 1. třetina</td><td></td><td></td></tr>
+<tr><td class="left">Góly 2. třetina</td><td></td><td></td></tr>
+<tr><td class="left">Góly 3. třetina</td><td></td><td></td></tr>
+<tr><td class="left">Rozhodnuto v prodloužení</td><td></td><td></td></tr>
+</table>
 
 </div>
 
 <script>
-const input = document.getElementById("imageInput");
-const btn = document.getElementById("processBtn");
-
-input.addEventListener("change", () => {
-    btn.disabled = input.files.length === 0;
+document.getElementById("img").addEventListener("change",()=>{
+alert("Obrázek nahrán. OCR a parsování statistik se doplní v dalším kroku.");
 });
 </script>
 
