--- a/import.html
+++ b/import.html
@@ -58,15 +58,15 @@ button{padding:8px 14px;margin-top:10px}
 
 <script>
 
-/* ===== FIREBASE CONFIG — SEM VLOŽ SVŮJ ===== */
+
+// Your web app's Firebase configuration
 const firebaseConfig = {
-  apiKey: "DOPLNIT",
-  authDomain: "DOPLNIT",
-  databaseURL: "DOPLNIT",
-  projectId: "DOPLNIT",
-  storageBucket: "DOPLNIT",
-  messagingSenderId: "DOPLNIT",
-  appId: "DOPLNIT"
+  apiKey: "AIzaSyD0jDnVNHAzs83g6FGwQT_nQpOCvI4NTNU",
+  authDomain: "statistiky-6310a.firebaseapp.com",
+  projectId: "statistiky-6310a",
+  storageBucket: "statistiky-6310a.firebasestorage.app",
+  messagingSenderId: "1023222901562",
+  appId: "1:1023222901562:web:522ee763e27aa08a8b7e03"
 };
 
 firebase.initializeApp(firebaseConfig);
